<resources>
    <string name="app_name">Legends Playbook</string>
    <string name="legends_name">Name</string>
    <string name="legends_description">Description</string>
    <string name="about">About Me</string>
    <string name="about_name">Muhammad Kahfy Noor Alwani</string>
    <string name="about_email">kahfinoor013@gmail.com</string>
    <string name="about_github">https://github.com/KahfiNoor</string>
    <string name="about_linkedin">https://linkedin.com/in/kahfy-noor</string>
    <string name="about_repo">https://github.com/KahfiNoor/LegendsPlaybook</string>
    <string name="detail_name">Name</string>
    <string name="detail_role">Role</string>
    <string name="detail_description">Description</string>
    <string name="detail_real_name">Real Name</string>
    <string name="detail_Age">Age</string>
    <string name="detail_home">Home</string>
    <string name="detail_class">Class</string>
    <string name="detail_tactical">Tactical Ability</string>
    <string name="detail_passive">Passive Ability</string>
    <string name="detail_ultimate">Ultimate Ability</string>
    <string name="share">Share</string>
    <string name="read_more">Read More</string>
    <string name="iv_full_photo">full_photo</string>
    <string name="iv_photo_profile">Photo Profile</string>
    <string name="about_repository">Repository</string>
    <string name="about_view_github">Github</string>
    <string name="about_view_linkedin">Linkedin</string>
    <string-array name="legends_name_data">
        <item>Alter</item>
        <item>Ash</item>
        <item>Ballistic</item>
        <item>Bangalore</item>
        <item>Bloodhound</item>
        <item>Catalyst</item>
        <item>Caustic</item>
        <item>Conduit</item>
        <item>Crypto</item>
        <item>Fuse</item>
        <item>Gibraltar</item>
        <item>Horizon</item>
        <item>Lifeline</item>
        <item>Loba</item>
        <item>Mad Maggie</item>
        <item>Mirage</item>
        <item>Newcastle</item>
        <item>Octane</item>
        <item>Pathfinder</item>
        <item>Rampart</item>
        <item>Revenant</item>
        <item>Seer</item>
        <item>Valkyrie</item>
        <item>Vantage</item>
        <item>Wattson</item>
        <item>Wraith</item>
    </string-array>
    <string-array name="legends_role_data">
        <item>Void Breacher</item>
        <item>Incisive Instigator</item>
        <item>Refined Gunslinger</item>
        <item>Professional Soldier</item>
        <item>Technological Tracker</item>
        <item>Defensive Conjurer</item>
        <item>Toxic Trapper</item>
        <item>Shield Healer</item>
        <item>Surveillance Expert</item>
        <item>Bombastic Explosives Expert</item>
        <item>Shielded Fortress</item>
        <item>Gravitational Manipulator</item>
        <item>Combat Medic</item>
        <item>Translocating Thief</item>
        <item>Rebel Warlord</item>
        <item>Holographic Trickster</item>
        <item>Heroic Defender</item>
        <item>High-Speed Daredevil</item>
        <item>Forward Scout</item>
        <item>Amped Modder</item>
        <item>Synthetic Nightmare</item>
        <item>Ambush Artist</item>
        <item>Winged Avenger</item>
        <item>Sniper Savant</item>
        <item>Static Defender</item>
        <item>Interdimensional Skirmisher</item>
    </string-array>
    <string-array name="legends_real_name_data">
        <item>YingLing Lui (雷盈灵)</item>
        <item>Dr. Ashleigh Reid</item>
        <item>August Montgomery Brinkman</item>
        <item>Anita Williams</item>
        <item>Blódhundr</item>
        <item>Tressa Crystal Smith</item>
        <item>Alexander Nox</item>
        <item>Rowenna Valentina Coffey Divina</item>
        <item>Tae Joon Park</item>
        <item>Walter Fitzroy Jr.</item>
        <item>Makoa Gibraltar</item>
        <item>Dr. Mary Somers</item>
        <item>Ajay Che</item>
        <item>Loba Andrade</item>
        <item>Margaret Kōhere</item>
        <item>Elliott Witt</item>
        <item>Jackson Williams</item>
        <item>Octavio Silva</item>
        <item>Pathfinder</item>
        <item>Ramya Parekh</item>
        <item>Kaleb Cross</item>
        <item>Obi Edolasim</item>
        <item>Kairi Imahara</item>
        <item>Xiomara “Mara” Contreras</item>
        <item>Natalie Paquette</item>
        <item>Renee Hope Blasey</item>
    </string-array>
    <string-array name="legends_age_data">
        <item>Unknown</item>
        <item>122</item>
        <item>63</item>
        <item>40</item>
        <item>40</item>
        <item>30</item>
        <item>50</item>
        <item>27</item>
        <item>24</item>
        <item>55</item>
        <item>32</item>
        <item>39 (Give or take an extra 87years…)</item>
        <item>26</item>
        <item>36</item>
        <item>56</item>
        <item>32</item>
        <item>41</item>
        <item>26</item>
        <item>77</item>
        <item>23</item>
        <item>359</item>
        <item>27</item>
        <item>31</item>
        <item>19</item>
        <item>24</item>
        <item>34</item>
    </string-array>
    <string-array name="legends_home_world_data">
        <item>Unknown</item>
        <item>Unknown</item>
        <item>Gaea</item>
        <item>Gridiron</item>
        <item>Talos</item>
        <item>Boreas</item>
        <item>Gaea</item>
        <item>Nexus</item>
        <item>Gaea</item>
        <item>Salvo</item>
        <item>Solace</item>
        <item>Solace</item>
        <item>Psamathe</item>
        <item>None</item>
        <item>Salvo</item>
        <item>Solace</item>
        <item>Gridiron</item>
        <item>Psamathe</item>
        <item>Psamathe</item>
        <item>Gaea</item>
        <item>Unknown</item>
        <item>Boreas</item>
        <item>Angelia</item>
        <item>Págos</item>
        <item>Solace</item>
        <item>Typhon</item>
    </string-array>
    <string-array name="legends_class_data">
        <item>Skirmisher</item>
        <item>Assault</item>
        <item>Assault</item>
        <item>Assault</item>
        <item>Recon</item>
        <item>Controller</item>
        <item>Controller</item>
        <item>Support</item>
        <item>Recon</item>
        <item>Assault</item>
        <item>Support</item>
        <item>Skirmisher</item>
        <item>Support</item>
        <item>Support</item>
        <item>Assault</item>
        <item>Support</item>
        <item>Support</item>
        <item>Skirmisher</item>
        <item>Skirmisher</item>
        <item>Controller</item>
        <item>Skirmisher</item>
        <item>Recon</item>
        <item>Skirmisher</item>
        <item>Recon</item>
        <item>Controller</item>
        <item>Skirmisher</item>
    </string-array>
    <string-array name="legends_tactical_data">
        <item>Void Passage</item>
        <item>Arc Snare</item>
        <item>Whistler</item>
        <item>Smoke Launcher</item>
        <item>Eye of the Allfather</item>
        <item>Piercing Spikes</item>
        <item>Nox Gas Trap</item>
        <item>Radiant Transfer</item>
        <item>Surveillance Drone</item>
        <item>Knuckle Cluster</item>
        <item>Dome of Protection</item>
        <item>Gravity Lift</item>
        <item>D.O.C. Heal Drone</item>
        <item>Burglar\'s Best Friend</item>
        <item>RIOT DRILL</item>
        <item>Psyche Out</item>
        <item>Mobile Shield</item>
        <item>Stim</item>
        <item>Grappling Hook</item>
        <item>Amped Cover</item>
        <item>Shadow Pounce</item>
        <item>Focus of Attention</item>
        <item>Missile Swarm</item>
        <item>Echo Relocation</item>
        <item>Perimeter Security</item>
        <item>Into the Void</item>
    </string-array>
    <string-array name="legends_passive_data">
        <item>Gift from the Rift</item>
        <item>Marked For Death</item>
        <item>Sling</item>
        <item>Double Time</item>
        <item>Tracker</item>
        <item>Barricade</item>
        <item>Nox Vision</item>
        <item>Savior\'s Speed</item>
        <item>Neurolink</item>
        <item>Grenadier</item>
        <item>Gun Shield</item>
        <item>Spacewalk</item>
        <item>Combat Glide</item>
        <item>Eye for Quality</item>
        <item>WARLORD\'S IRE</item>
        <item>Now You See Me..</item>
        <item>Retrieve the Wounded</item>
        <item>Swift Mend</item>
        <item>Insider Knowledge</item>
        <item>Modded Loader</item>
        <item>Assassin\'s Instinct</item>
        <item>Heart Seeker</item>
        <item>VTOL Jets</item>
        <item>Spotter\'s Lens</item>
        <item>Spark of Genius</item>
        <item>Voices from the Void</item>
    </string-array>
    <string-array name="legends_ultimate_data">
        <item>Void Nexus</item>
        <item>Phase Breach</item>
        <item>Tempest</item>
        <item>Rolling Thunder</item>
        <item>Beast of the Hunt</item>
        <item>Dark Veil</item>
        <item>Nox Gas Grenade</item>
        <item>Energy Barricade</item>
        <item>Drone EMP</item>
        <item>The Motherlode</item>
        <item>Defensive Bombardment</item>
        <item>Black Hole</item>
        <item>D.O.C. Halo</item>
        <item>Black Market Boutique</item>
        <item>WRECKING BALL</item>
        <item>Life of the Party</item>
        <item>Castle Wall</item>
        <item>Launch Pad</item>
        <item>Zipline Gun</item>
        <item>Emplaced Minigun “Sheila”</item>
        <item>Forged Shadows</item>
        <item>Exhibit</item>
        <item>Skyward Dive</item>
        <item>Sniper\'s Mark</item>
        <item>Interception Pylon</item>
        <item>Dimensional Rift</item>
    </string-array>
</resources>