<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="520dp"
            android:layout_gravity="center"
            android:background="@color/red">

            <!-- Icon Apex -->
            <View
                android:layout_width="300dp"
                android:layout_height="350dp"
                android:background="@drawable/apex_logo_icon"
                android:layout_gravity="center"
                android:scaleType="centerCrop" />

            <!-- Overlay Gradient Top -->
            <View
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_gravity="center|top"
                android:background="@drawable/black_gradient_overlay" />

            <!-- Foto -->
            <ImageView
                android:id="@+id/iv_photo_profile"
                android:layout_width="400dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:paddingTop="50dp"
                android:src="@drawable/photo_profile"
                android:contentDescription="@string/iv_photo_profile"
                android:scaleType="centerCrop" />

            <!-- Overlay Gradien Bottom -->
            <View
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_gravity="center|bottom"
                android:background="@drawable/red_gradient_overlay" />

            <!-- Name and Role -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:text="@string/about_name"/>

                <TextView
                    android:id="@+id/tv_about_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    android:textAlignment="center"
                    android:text="@string/about_email" />
            </LinearLayout>

        </FrameLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/apex_divider"
            android:layout_gravity="center"
            android:layout_marginVertical="10dp"
            android:scaleType="centerCrop" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="16dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="Let's Connect!"/>

        <Button
            android:id="@+id/btn_linkedin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:backgroundTint="@color/material_dynamic_primary50"
            android:text="@string/about_view_linkedin"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_github"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:backgroundTint="@color/black"
            android:text="@string/about_view_github"
            android:textColor="@color/white" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/apex_divider"
            android:layout_gravity="center"
            android:layout_marginVertical="10dp"
            android:scaleType="centerCrop" />

        <Button
            android:id="@+id/btn_source_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/about_repository"
            android:textColor="@color/white"
            android:textAlignment="center" />

    </LinearLayout>
</ScrollView>
