<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="520dp"
            android:layout_gravity="center"
            android:background="@color/red">

            <!-- Icon Apex -->
            <View
                android:layout_width="300dp"
                android:layout_height="350dp"
                android:background="@drawable/apex_logo_icon"
                android:layout_gravity="center"
                android:scaleType="centerCrop" />

            <!-- Overlay Gradient Top -->
            <View
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_gravity="center|top"
                android:background="@drawable/black_gradient_overlay" />

            <!-- Foto -->
            <ImageView
                android:id="@+id/iv_detail_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:contentDescription="@string/iv_full_photo"
                android:scaleType="centerCrop" />

            <!-- Overlay Gradien Bottom -->
            <View
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_gravity="center|bottom"
                android:background="@drawable/red_gradient_overlay" />

            <!-- Name and Role -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/tv_detail_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:text="@string/detail_name" />

                <TextView
                    android:id="@+id/tv_detail_role"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    android:textAlignment="center"
                    android:text="@string/detail_role" />
            </LinearLayout>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="center"
            android:background="@color/gray"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:text="@string/detail_class"/>

            <!-- Icon Kelas -->
            <ImageView
                android:id="@+id/iv_class_icon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginVertical="10dp"

                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/tv_detail_class"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:text="@string/detail_class"/>
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/apex_divider"
            android:layout_gravity="center"
            android:layout_marginVertical="6dp"
            android:scaleType="centerCrop" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="16dp"
                android:textColor="@color/black"
                android:text="@string/detail_description"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_detail_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="16dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="normal" />

            <!-- Read More Button -->
            <Button
                android:id="@+id/btn_read_more"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/read_more"
                android:textColor="@color/red"
                android:background="@android:color/transparent"
                android:textStyle="normal"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/apex_divider"
            android:layout_gravity="center"
            android:layout_marginVertical="10dp"
            android:scaleType="centerCrop" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="16dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="Details"/>

            <!-- Real Name -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_marginHorizontal="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="5dp"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:text="@string/detail_real_name"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_detail_realname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    android:text="@string/detail_real_name"/>
            </LinearLayout>

            <!-- Age -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_marginHorizontal="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="5dp"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:text="@string/detail_Age"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_detail_age"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    android:text="@string/detail_Age"/>
            </LinearLayout>

            <!-- Home -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_marginHorizontal="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="5dp"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:text="@string/detail_home"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_detail_home"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    android:text="@string/detail_home"/>
            </LinearLayout>

            <!-- Tactical Ability -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_marginHorizontal="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="5dp"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:text="@string/detail_tactical"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_detail_tactical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    android:text="@string/detail_tactical"/>
            </LinearLayout>

            <!-- Passive Ability -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_marginHorizontal="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="5dp"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:text="@string/detail_passive"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_detail_passive"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    android:text="@string/detail_passive"/>
            </LinearLayout>

            <!-- Passive Ability -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_marginHorizontal="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="5dp"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:text="@string/detail_ultimate"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_detail_ultimate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    android:text="@string/detail_ultimate"/>
            </LinearLayout>

        <Button
            android:id="@+id/btn_action_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/red"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/share" />
    </LinearLayout>
</ScrollView>
